able to target the social media icons in css. Used flexbox to make them responsive on phone size. Fixed about me parapgraph fon size on smaller screens

--- a/styles.css
+++ b/styles.css
@@ -240,6 +240,11 @@ font-weight: 300;
 }
 */
 
+.social-media{
+  display: flex;
+  justify-content: center;
+}
+
 .email-address {
   font-family: 'Rubik', sans-serif;
   font-weight: 300;
@@ -326,7 +331,7 @@ font-weight: 300;
 
 @media (max-width: 800px){
   #about-me p{
-    font-size: 16px;
+    font-size: 18px;
   }
 
   .skills h1{
@@ -342,7 +347,7 @@ font-weight: 300;
 
 @media (max-width: 600px){
   #about-me p{
-    font-size: 14px;
+    font-size: 17px;
   }
 }
 
@@ -376,7 +381,7 @@ font-weight: 300;
 
 #about-me p {
   font-family: 'Rubik', sans-serif;
-  font-size: 14px;
+  font-size: 16px;
   font-weight: 300;
 }
 
@@ -392,7 +397,7 @@ font-weight: 300;
 
 @media (max-width: 475px) {
   #about-me p {
-    font-size: 13px;
+    font-size: 16px;
   }
 
   .contact-inner h1{
@@ -404,9 +409,11 @@ font-weight: 300;
     width: 95%;
   }
 
-  .contact-inner a{
-    font-size: 16px ;
-    padding: 0 30px;
+ 
+
+   .social-media {
+     display: flex;
+     flex-wrap: wrap;
    }
 
 }
